<resources>
    <string name="app_name">Photo Time Fix</string>
    <string name="selectFolder">Select folder</string>
    <string name="sdcard_dcim_camera" translatable="false">/sdcard/DCIM/Camera</string>
    <string name="startLocation">Starting point</string>
    <string name="_0" translatable="false">0</string>
    <string name="java">Mode 1: Java</string>
    <string name="shell">Mode 2: Shell</string>
    <string name="format">Manual input format</string>
    <string name="img_yyyymmddhhmm_hhmmss_jpg" translatable="false">IMG_yyyyMMddHHmm_HHmmss.jpg</string>
    <string name="start">Start</string>
    <string name="about">Help</string>
    <string name="fresh">Refresh Media Library</string>
    <string name="selectFile">Select file</string>
    <string name="selectDate">Select date and time</string>
    <string name="nowdatetime">Current date time</string>
    <string name="showexif">View EXIF</string>
    <string name="switchIcon">Toggle icon</string>
    <string name="test">Compatibility test</string>
    <string name="exifSwitch">Using Exif in the batch</string>
    <string name="experimentalFunction">Experimental function</string>
    <string name="imageContent">Show selected picture</string>
    <string name="endLocation">End Position</string>
    <string name="batchOperation">Batch operation</string>
    <string name="singleFileOperation">Single file operation</string>
    <string name="permissionDenied">Storage permission denied</string>
    <string name="shouldHavePermission">The app must be granted storage permissions to work properly</string>
    <string name="OK">OK</string>
    <string name="selectError">Selection error, please fill in the path manually and contact the developer</string>
    <string name="usingEXIF">Use EXIF time</string>
    <string name="cancel">Cancel</string>
    <string name="fileNotExistence">Path or file does not exist</string>
    <string name="progress">progress</string>
    <string name="checkRoot">Please check root permissions</string>
    <string name="systemNotSupport">Your system most likely does not support this operation, please change the operation mode</string>
    <string name="finish">Finish!</string>
    <string name="systemLimit">Due to system limitations (in fact I am lazy), please select any picture in the folder</string>
    <string name="webviewError">Error loading WebView, the help window has stopped showing. \\nThis error does not affect the normal functioning, and the developer has only encountered it on the simulator. If this dialog box appears, please contact the developer.</string>
    <string name="notInstallCoolapk">CoolApk is not installed</string>
    <string name="setDelay">Set delay</string>
    <string name="okToUseNew">OK to use the new version, cancel the old version</string>
    <string name="runningTest">Running compatibility test …</string>
    <string name="creatingFile">\\nCreating test file(/sdcard/CompatibilityTestFile)…</string>
    <string name="fault">Failed\\n</string>
    <string name="success">success</string>
    <string name="startMode1">\\nStart execution Mode 1: Java availability check …</string>
    <string name="checkResult">\\nCommand executed successfully … check execution result\\n</string>
    <string name="checkMode1Finish">\\nChecked … Mode 1: Java is fully available</string>
    <string name="returnButCannotUse">\\nThe system returned to execute successfully but did not take effect</string>
    <string name="checkMode1Fault">\\nCommand execution failed, mode one: Java is not available, please contact the author for help</string>
    <string name="checkTouch">\\nRooted … check touch command \\ntouch —help\\n</string>
    <string name="findTouch">\\nFind touch command … check availability\\ntouch /sdcard/CompatibilityTestFile -t 200409040521\\n</string>
    <string name="checkMode2Finish">\\nChecked … Mode 2: Shell is fully available</string>
    <string name="checkMode2Fault">\\nCommand execution failed, Mode 2: Shell is unavailable, please contact the author for help</string>
    <string name="getRootFault">\\nFailed to obtain root permissions, Mode 2: Shell is unavailable</string>
    <string name="cleaning">\\nCleaning up test files(/sdcard/CompatibilityTestFile)…</string>
    <string name="cannotFindTouch">\\ntouch command does not exist, please install Busybox yourself or contact the author for help</string>
    <string name="startCheckMode2">\\nStart execution Mode 2: Shell availability check … Checking root permissions</string>
    <string name="close">Close</string>
    <string name="notDictionary">The path is a file, not a dictionary</string>
    <string name="error">Error</string>
</resources>
