<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="photoTimeFix.Fragment1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/locateText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/selectFolder"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:text="@string/sdcard_dcim_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startLocation" />

                <EditText
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:hint="@string/_0"
                    android:inputType="number"
                    android:text="@string/_0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/endLocation" />

                <EditText
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:hint="@string/_0"
                    android:inputType="number"
                    android:text="@string/_0" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format" />

            <EditText
                android:id="@+id/editFormat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/img_yyyymmddhhmm_hhmmss_jpg"
                android:inputType="textPersonName" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioButton"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/java" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shell" />


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/chooseButton"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/selectFolder"
                android:layout_weight="1" />

            <Button
                android:id="@+id/freshButton"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fresh"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/startButton"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
